--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "resize-image-map",
   "version": "1.0.0",
   "description": "responsive image map",
-  "main": "index.js",
+  "main": "build/resize-image.js",
   "scripts": {
     "start": "webpack --config webpack.config.js --mode development",
     "server": "webpack-dev-server --mode development",
-    "dev": "webpack --config webpack.config.js --mode development"
+    "build": "webpack --config webpack.npmbuild.js --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,12 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
