--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/resize-image.js",
   "scripts": {
     "start": "webpack --config webpack.config.js --mode development",
-    "server": "webpack-dev-server --mode development",
-    "build": "webpack --config webpack.npmbuild.js --mode production"
+    "server": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
