--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "plugins": ["babel-plugin-transform-es2015-modules-commonjs"]
+  "presets": [
+    "es2015", "stage-2"
+  ]
 }
