--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": [
-    "es2015", "stage-2"
-  ]
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "ie 11"]
+      }
+    }], "stage-2"
+  ],
+  "plugins": ["transform-class-properties"]
 }
