--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "npm run localBuild | npm run server",
     "localBuild": "webpack --config webpack.config.js --mode development",
-    "server": "webpack-dev-server --mode development",
-    "build": "webpack --config webpack.prod.js --mode production"
+    "server": "webpack-dev-server --mode development --hot --inline"
   },
   "repository": {
     "type": "git",
@@ -28,10 +27,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^4.14.0",
